Scale container to avoid inner scrollbars in case of a long sidebar.

--- a/webapp/styles/callimachus.less
+++ b/webapp/styles/callimachus.less
@@ -110,11 +110,13 @@ html.login .nav-tabs ~ .tab-content {
     .border-radius(0 0 4px 4px);
     border-top: none;
     padding: 1rem;
+    margin-bottom: 10px;
 }
 
 html.login.iframe .nav-tabs ~ .tab-content {
     padding: 0;
     border: 0;
+    margin-bottom: 0;
 }
 
 html, body {
@@ -190,7 +192,6 @@ form {
 }
 
 /* breadcrumbs */
-
 
 .navbar + .container {
     padding-top: 2.5em;
